Adjustments and Skillcards

--- a/pld.html
+++ b/pld.html
@@ -2,24 +2,33 @@
 <html lang="en">
 <head>
 	<title>PLD | Copied Factory</title>
+	<link rel="icon" href="ui/icon.png">
+	<!-- <link rel="stylesheet" href="optistyle.css"> -->
 	<link rel="stylesheet" href="downwith.css">
 	<link rel="stylesheet" href="stylish.css">
+	<link rel="stylesheet" href="headertest.css">
 	<link rel="stylesheet" href="skills/pld.css">
-	<meta charset="UTF-8">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
 	
 </head>
 <body>
+<!-- <p class="todo">Site title title heading thing. "Copied Factory"- big text- the works...? Also really need to find a better way to display skill information....</p> -->
 <header>
-<p class="todo">there should be a header here someday...</p>
+<nav class="sitenav">
+<a href="index.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> Home</h2></a>
+<a href="jobguides.html"><h2 class="menu active"><img src="ui/icon.png" class="menuicon"> Job Guides</h2></a>
+<a href="tips.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> Tips</h2></a>
+<a href="about.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> About</h2></a>
+</nav>
 </header>
+
 
 <main>
 <article>
-
-
-<div style="margin-bottom:1.1em;"><h1 class="title"><img src="ui/paladin.png" style="height:1.4em;margin-bottom:-.2em;"> Paladin</h1></div>
-<hr>
+<h1 class="articletitle">Paladin</h1>
+<h2 class="subtitle">-The Oathkeeper</h2>
 <div class="flex">
 <nav class="articlenav">
 	<!-- <h1>Contents</h1> -->
@@ -34,60 +43,61 @@
 	</ul>
 </nav>
 <blockquote>
-<p class="timestamp"><em>Updated: 5:40 PM 1/17/2022</em></p>
+<p class="timestamp"><em>■ Updated: 5:40 PM 1/17/2022</em></p>
 <p>Paladin is a tank with a simple linear rotation that alternates between physical melee and magical ranged phases. With interesting utility in skills like Clemency and Cover, plus the fun of using Hallowed Ground to take zero damage even during some of the hardest hitting attacks, paladin is one of the easiest tanks to pick up but can still take a lot of practice to master!</p>
 </blockquote>
 </div>
 
-<section id="skills" class="pad"><h1 class="section">Actions and Traits</h1>
+<section id="skills" class="pad"><h1 class="section">■ Actions and Traits</h1>
 <p>Descriptions are written as the action exists at level 90. Some actions change with traits as you level up, so while leveling your actions may lack certain effects.
 All actions and traits are listed in the order that they are learned. Actions that reference another will include links to the other skills.
 Recast times are taken at base skillspeed and spellspeed. Raising these attributes will shorten the recast times of weaponskills and spells respectively.</p>
+<p class="center">◎&nbsp;Range &mdash; ◉&nbsp;Radius &mdash; ◍&nbsp;Cast&nbsp;Time &mdash; ◕&nbsp;Recast&nbsp;Time</p>
 
 <!-- Skill tables -->
-<table id="fastblade">
-	<tr><th>Lv.01</th><th colspan="3">Fast Blade</th><td colspan="1">Weapon<wbr>skill</td></tr>
-	<tr><td rowspan="2" class="icon"><span class="t fastblade"></span></td>
-		<td>Range: 3y</td><td>Radius: 0y</td><td>Cast: Instant</td><td>Recast: 2.5s</td></tr>
-	<tr><td colspan="4">Light hitting physical attack that begins your melee combo. Combo's into <a href="#riotblade">Riot Blade</a>.</td></tr>
-</table>
+<div id="fastblade" class="skillcard">
+	<span class="fastblade"></span>
+	<h1>Fast Blade</h1>
+	<p>Lv.01 &mdash; Weapon<wbr>skill &mdash; ◎3y ◉0y ◍Instant ◕2.5s</p><hr>
+	<p>Light hitting physical attack that begins your melee combo. Combo's into <a href="#riotblade">Riot Blade</a>.</p>
+</div>
 
-<table id="tankmastery">
-	<tr><th>Lv.01</th><th colspan="3">Tank Mastery</th><td colspan="1">Trait</td></tr>
-	<tr><td rowspan="1" class="icon"><span class="t tankmastery"></span></td>
-		<td colspan="4">Passively reduces all damage taken by 20%. Also gives bonus HP based on vitality and bonus damage based on strength.</td></tr>
-</table>
+<div id="tankmastery" class="skillcard">
+	<span class="tankmastery"></span>
+	<h1>Tank Mastery</h1>
+	<p>Lv.01 &mdash; Trait</p><hr>
+	<p>Passively reduces all damage taken by 20%. Also gives bonus HP based on vitality and bonus damage based on strength.</p>
+</div>
 
-<table id="fightorflight">
-	<tr><th>Lv.02</th><th colspan="3">Fight or Flight</th><td colspan="1">Ability</td></tr>
-	<tr><td rowspan="2" class="icon"><span class="t fightorflight"></span></td>
-		<td>Range: 0y</td><td>Radius: 0y</td><td>Cast: Instant</td><td>Recast: 60s</td></tr>
-	<tr><td colspan="4">Increases your physical damage by 25% for 25s.</td></tr>
-</table>
+<div id="fightorflight" class="skillcard">
+	<span class="fightorflight"></span>
+	<h1>Fight or Flight</h1>
+	<p>Lv.02 &mdash; Ability &mdash; ◎3y ◉0y ◍Instant ◕2.5s</p><hr>
+	<p>Increases your physical damage by 25% for 25s.</p>
+</div>
 
-<table id="riotblade">
-	<tr><th>Lv.04</th><th colspan="3">Riot Blade</th><td colspan="1">Weapon<wbr>skill</td></tr>
-	<tr><td rowspan="2" class="icon"><span class="t riotblade"></span></td>
-		<td>Range: 3y</td><td>Radius: 0y</td><td>Cast: Instant</td><td>Recast: 2.5s</td></tr>
-	<tr><td colspan="4">Moderate hitting physical attack. Combo's from <a href="#fastblade">Fast Blade</a> which deals inceased damage and restores MP. Combo's into <a href="#rageofhalone">Rage of Halone</a>, <a href="#royalauthority">Royal Authority</a>, or <a href="#goringblade">Goring Blade</a>.</td></tr>
-</table>
+<div id="riotblade" class="skillcard">
+	<span class="riotblade"></span>
+	<h1>Riot Blade</h1>
+	<p>Lv.04 &mdash; Weapon<wbr>skill &mdash; ◎3y ◉0y ◍Instant ◕2.5s</p><hr>
+	<p>Moderate hitting physical attack. Combo's from <a href="#fastblade">Fast Blade</a> which deals inceased damage and restores MP. Combo's into <a href="#rageofhalone">Rage of Halone</a>, <a href="#royalauthority">Royal Authority</a>, or <a href="#goringblade">Goring Blade</a>.</p>
+</div>
 
-<table id="totaleclipse">
-	<tr><th>Lv.06</th><th colspan="3">Total Eclipse</th><td colspan="1">Weapon<wbr>skill</td></tr>
-	<tr><td rowspan="2" class="icon"><span class="t totaleclipse"></span></td>
-		<td>Range: 0y</td><td>Radius: 5y</td><td>Cast: Instant</td><td>Recast: 2.5s</td></tr>
-	<tr><td colspan="4">AoE weaponskill centered around you. Combo's into <a href="#prominence">Prominence</a>.</td></tr>
-</table>
+<div id="totaleclipse" class="skillcard">
+	<span class="totaleclipse"></span>
+	<h1>Total Eclipse</h1>
+	<p>Lv.06 &mdash; Weapon<wbr>skill &mdash; ◎0y ◉5y ◍Instant ◕2.5s</p><hr>
+	<p>Physical AoE attack that is centered around you. Combo's into <a href="#prominence">Prominence</a>.</p>
+</div>
 
-<table id="clemency">
-	<tr><th>Lv.58</th><th colspan="3">Clemency<td colspan="1">Spell</td></tr>
-	<tr><td rowspan="2" class="icon"><span class="t clemency"></span></td>
-		<td>Range: 30y</td><td>Radius: 0y</td><td>Cast: 1.5s</td><td>Recast: 2.5s</td></tr>
-	<tr><td colspan="4">Restores targets HP by a large amount. If the target is a party member also heals you by 50% of the amount healed. <strong>MP Cost: 2000</strong></td></tr>
-</table>
+<div id="clemency" class="skillcard">
+	<span class="clemency"></span>
+	<h1>Clemency</h1>
+	<p>Lv.58 &mdash; Spell &mdash; ◎30y ◉0y ◍1.5s ◕2.5s</p><hr>
+	<p>Restores targets HP by a large amount. If the target is a party member also heals you by 50% of the amount healed. <strong>MP Cost: 2000</strong></p>
+</div>
 
-
-<p class="todo">finish adding other skills.</p>
+<p class="todo">TODO!!finish adding other skills.</p>
 </section>
 
 <!-- BIS Section example....
@@ -111,7 +121,7 @@ Recast times are taken at base skillspeed and spellspeed. Raising these attribut
 </section>
  -->
 
-<section id="open" class="pad"><h1 class="section">Openers</h1>
+<section id="open" class="pad"><h1 class="section">■ Openers</h1>
 	<p>Paladin has two two useful opener variations. The first starts your rotation off with the Fight or Flight window, getting as many cooldowns off within raid buffs as possible and setting you right on your standard rotation loop. The second one jumps into your Requiscat window which can help align your ranged attacks with times that you need to disengage from the boss. The Fight or Flight opener is recommended in most cases. </p>
 	<p>As of writing we are still very early on in the expansion. As such openers can and will change slightly over time due to more refined testing as well as changing GCD speeds that align better with current raid tier mechanics.</p>
 
@@ -185,7 +195,7 @@ Recast times are taken at base skillspeed and spellspeed. Raising these attribut
 </section>
 
 
-<section id="rot" class="pad"><h1 class="section">Rotation</h1>
+<section id="rot" class="pad"><h1 class="section">■ Rotation</h1>
 	<p>The paladin rotation is a minute long loop with 3 "phases" that you cycle around. First the Fight or Fight phase where you aim to get as many of your GCD and oGCD skills fit within the Fight or Flight buff as possible. Then the Requiescat phase where you expend all your Requiescat stacks, finishing with your powerful Confiteor combo. Lastly you have an "Unbuffed" phase where you bide you time with a Royal Authority combo and Atonements until Fight or Flight is off cooldown allowing you to start the loop over again.</p><p> This full loop can come out to ~64s for a standard loop, or ~61s for a shorter loop that fits better into buff windows. This is discussed more in the Unbuffed Phase section.</p>
 	
 	<section><h1>Fight or Flight Phase</h1>
@@ -255,7 +265,7 @@ Recast times are taken at base skillspeed and spellspeed. Raising these attribut
 
 <p class="todo">Anything below this line is just filler text for the sake of style testing and stuff.</p><hr>
 
-<article><h2>Dummy Text</h2><!-- Dummy Text -->
+<article><h2>■ Dummy Text</h2><!-- Dummy Text -->
 <section class="pad">
 <h1 class="section">Ability Overview</h1>
 <p>Praesent et lobortis tellus, vitae eleifend est. Suspendisse interdum gravida libero. Nulla varius justo sit amet mauris convallis rhoncus. Quisque at fringilla nisl, non eleifend felis. Curabitur id sapien eu libero commodo suscipit in vel massa. In sollicitudin viverra tellus in rhoncus. Proin nec nisi nisi. Nullam quis lorem nibh. Suspendisse nisl dui, rhoncus ut varius nec, sagittis et elit.</p>
