Header Border Fix 2
Please...

--- a/pld.html
+++ b/pld.html
@@ -43,7 +43,7 @@
 	</ul>
 </nav>
 <blockquote>
-<p class="timestamp"><em>■ Updated: 5:40 PM 1/17/2022</em></p>
+<p class="timestamp"><em>■ Updated: 12:44 AM 1/24/2022</em></p>
 <p>Paladin is a tank with a simple linear rotation that alternates between physical melee and magical ranged phases. With interesting utility in skills like Clemency and Cover, plus the fun of using Hallowed Ground to take zero damage even during some of the hardest hitting attacks, paladin is one of the easiest tanks to pick up but can still take a lot of practice to master!</p>
 </blockquote>
 </div>
