--- a/pld.html
+++ b/pld.html
@@ -3,10 +3,7 @@
 <head>
 	<title>PLD | Copied Factory</title>
 	<link rel="icon" href="ui/icon.png">
-	<!-- <link rel="stylesheet" href="optistyle.css"> -->
-	<link rel="stylesheet" href="downwith.css">
-	<link rel="stylesheet" href="stylish.css">
-	<link rel="stylesheet" href="headertest.css">
+	<link rel="stylesheet" href="style_default.css">
 	<link rel="stylesheet" href="skills/pld.css">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
