--- a/404.html
+++ b/404.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 	<title>404 | Copied Factory</title>
-	<link rel="stylesheet" href="downwith.css">
-	<link rel="stylesheet" href="stylish.css">
+	<link rel="stylesheet" href="style_default.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
