Home Page & Style

--- a/pld.html
+++ b/pld.html
@@ -14,10 +14,10 @@
 <!-- <p class="todo">Site title title heading thing. "Copied Factory"- big text- the works...? Also really need to find a better way to display skill information....</p> -->
 <header>
 <nav class="sitenav">
-<a href="index.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> Home</h2></a>
-<a href="jobguides.html"><h2 class="menu active"><img src="ui/icon.png" class="menuicon"> Job Guides</h2></a>
-<a href="tips.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> Tips</h2></a>
-<a href="about.html"><h2 class="menu inactive"><img src="ui/icon.png" class="menuicon"> About</h2></a>
+<a href="index.html"><h2 class="menu inactive"><img src="ui/home.bmp" class="menuicon"> Home</h2></a>
+<a href="jobguides.html"><h2 class="menu active"><img src="ui/jobs_inv.bmp" class="menuicon"> Job Guides</h2></a>
+<a href="tips.html"><h2 class="menu broken"><img src="ui/tips.bmp" class="menuicon"> Tips</h2></a>
+<a href="about.html"><h2 class="menu broken"><img src="ui/about.bmp" class="menuicon"> About</h2></a>
 </nav>
 </header>
 
